# judicial_autonomy_project

./: config.yaml  hello.py  pyproject.toml  requirements.txt
data/clean/: judicial_autonomy_q1_clean.csv  judicial_autonomy_q1_index_macro.csv  judicial_autonomy_q1_index_macro_micro.csv  judicial_autonomy_q1_index_macro_micro_add_info.csv  judicial_autonomy_q1_q2_index_macro.csv  judicial_autonomy_q1_q2_index_macro_micro.csv  judicial_autonomy_q2_clean.csv  judicial_autonomy_q2_index_macro.csv  judicial_autonomy_q2_index_macro_micro.csv  judicial_autonomy_q2_index_macro_micro_add_info.csv
data/raw/: judicial_autonomy_q2_dataset_25042025.csv
notebooks/: building_judicial_autonomy_index.ipynb
